--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <nav class="d-flex align-items-center justify-content-center">
-                <a href="index.html">
+                <a class="navbar-brand" href="index.html">
                     <img class="img-fluid" src="images/logo.png" alt="Bakery logo">
                 </a>
                 <ul class="nav-list text-center p-0">
@@ -40,12 +40,12 @@
                 </ul>
             </nav>
 
-            <div class="hero-text">
-                <h1>Welcome</h1>
+            <div class="hero-text w-100 text-white px-2 px-sm-0">
+                <h1 class="display-4">Welcome</h1>
 
-                <p>Baked goods like you've never seen before!</p>
-                <a href="#">Explore</a>
-                <a href="#">Find a store</a>
+                <p class="lead mb-4">Baked goods like you've never seen before!</p>
+                <a class="btn px-5 mr-2" href="#">Explore</a>
+                <a class="btn px-5 ml-2" href="#">Find a store</a>
             </div>
         </div>
     </header>
